<resources>
    <!-- TODO: remove pet crap -->
    <string name="title_activity_pet_details">Ver Mascota</string>
    <string name="title_activity_add_pet">Agregar Mascota</string>
    <string name="title_activity_edit_pet">Editar Mascota</string>
    <string name="name">Name</string>
    <string name="sending">Enviando…</string>
    <string name="empty_name_error">El nombre no puede ser vacío</string>
    <string name="pet_edit_success">Se han guardado los cambios</string>
    <string name="loading_pets_message">Cargando mascotas…</string>
    <string name="created_pet_success">Mascota creada!</string>
    <string name="empty_pets_list">No tienes mascotas</string>
    <string name="delete_pet_message">Mascota eliminada</string>
    <string name="undo_action">Deshacer</string>
    <string name="synching_pets_message">Hold on, we are syncing your pets…</string>


    <string name="app_name">BillShare</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_email_in_use">Could not create account, email already in use</string>

    <!-- URLs -->
    <string name="base_url">http://billshare.io:3000/</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_groups">Groups</string>
    <string name="tab_transactions">Transactions</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="empty_group_list">Create a New Group to get Started</string>
    <string name="empty_transaction_list">Create a new Transaction to get Started!</string>
    <string name="logout">Log Out</string>
    <string name="create_group">Create New Group</string>
    <string name="create_group_name">Group Name</string>
    <string name="billshare">BillShare</string>
    <string name="create_group_members">Group Members</string>
    <string name="create_group_add_user">+ Add Group Member</string>
    <string name="title_activity_add_user_by_email">AddUserByEmailActivity</string>
    <string name="add_user_by_email">Add User to Group</string>
    <string name="enter_user_email">Enter User\'s Email</string>
    <string name="title_activity_create_transaction">CreateTransactionActivity</string>
    <string name="create_transaction">Create New Transaction</string>
    <string name="transaction_name">transaction name</string>
    <string name="select_group">Select Group</string>
    <string name="amount">$ Amount</string>
    <string name="select_currency">currency</string>
    <string name="paid_by">Paid By</string>
    <string name="split_between">Split Between</string>

    <string-array name="currency_codes">
        <item>CAD</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <string name="title_activity_edit_transaction_split">EditTransactionSplit</string>
    <string name="who_paid_the_bill">Who Paid the Bill?</string>
    <string name="split_type">Split:</string>
    <string name="edit_transactons">Edit</string>
    <string name="split_details">Transaction Details</string>
    <string name="resolve_transaction">Paid in Full</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="monthly_transaction_summary">Last Month Transaction Summary</string>
    <string name="transaction_count">Transaction Count</string>
    <string name="summary_debt">Total Debt</string>
    <string name="summary_credit">Total Credit</string>
    <string name="percentage">% Percent Paid</string>
</resources>
