<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cleganeBowl2k18.trebuchet.presentation.view.activity.CreateTransactionActivity"
    tools:showIn="@layout/activity_create_transaction">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_group" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:id="@+id/select_group_spinner">

    </Spinner>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_label_edit_text"
        style="@style/Base.ContainerFullWidth">

        <EditText
            android:id="@+id/label_edit_text"
            android:hint="@string/name"
            style="@style/Base.ContainerFullWidth"/>

    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_amount_edit_text"
            style="@style/Base.ContainerFullWidth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:layout_marginRight="50dp">

            <EditText
                android:id="@+id/amount_edit_text"
                style="@style/Base.ContainerFullWidth"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/select_currency_code_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:layout_gravity="center_vertical|center_horizontal"
            android:entries="@array/currency_codes"
            android:prompt="@string/select_currency" >
        </Spinner>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paid_by" />

                <TextView
                    android:id="@+id/paid_by_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/split_between" />

                <TextView
                    android:id="@+id/split_between_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="match_parent"
                >

                <Button
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_transaction_btn"
                    android:text="@string/edit_transactons" />

            </FrameLayout>


        </LinearLayout>

    </ScrollView>



</LinearLayout>
